<resources>
    <string name="app_name">LifeCare</string>

    <string name="yes">Sim</string>
    <string name="no">Não</string>
    <string name="next">Próximo</string>
    <string name="Ha_mais_de_um_ano">Há mais de um ano?</string>
    <string name="Ha_menos_de_um_ano">Há menos de um ano?</string>
    <string name="Outras">Outras</string>

    <string name="Pai">Pai</string>
    <string name="Mae">Mãe</string>
    <string name="Avô">Avô</string>
    <string name="Avó">Avó</string>
    <string name="Irmao">Irmão</string>
    <string name="Irma">Irmã</string>

    <string name="formulario1_banner1">VAMOS LÁ! Clique no campo correspondente a resposta de cada questão</string>
    <string name="formulario1_banner2">\n Vai levar só alguns instantes.</string>
    <string name="formulario1_pergunta1">Você ficou internado no último ano?</string>
    <string name="formulario1_pergunta2">Possui diabetes?</string>
    <string name="formulario1_pergunta3">É acamado?</string>
    <string name="formulario1_pergunta4">Realiza consulta médica regulamente?</string>
    <string name="formulario1_pergunta5">Já realizou alguma cirugia?</string>
    <string name="formulario1_pergunta6">Tem depressão?</string>
    <!-- -->
    <string name="formulario1_pergunta7">Realiza atividade física regularmente?</string>
    <string name="vezes_por_semana">Vezes por semana</string>
    <string name="minutos_por_dia">Minutos por dia</string>
    <!-- -->
    <string name="formulario1_pergunta8">Quais desses alimentos consome com mais frequência</string>
    <string name="Arroz">Arroz</string>
    <string name="Feijao">Feijão</string>
    <string name="Massa">Massa</string>
    <string name="Batata">Batata</string>
    <string name="Acucar">Açucar</string>
    <string name="Carne">Carne</string>
    <string name="Ovos">Ovos</string>
    <string name="Leite">Leite</string>
    <string name="Queijo">Queijo</string>
    <string name="Vegetais">Vegetais</string>
    <string name="Sal">Sal</string>
    <!-- -->
    <string name="formulario1_pergunta9">Consome bebida alcoólica?</string>
    <!-- -->
    <string name="formulario1_pergunta10">Fuma?</string>
    <string name="Cigarros_por_dia">Cigarros por dia?</string>
    <!-- -->
    <string name="formulario1_pergunta11">Tem interesse em parar de fumar?</string>
    <string name="formulario1_pergunta12">Derrame (AVC)?</string>
    <string name="formulario1_pergunta13">Infarto agudo do miocárdio?</string>
    <!-- -->
    <string name="formulario1_pergunta14">Você tem doença pulmonar?</string>

    <string name="zerozero">00</string>
    <string name="TERMINAR">TERMINAR</string>

    <string name="Doenca_pulmonar_cronica">Doença Pulmonar Obstrtiva Crônica?</string>
    <string name="Bronquite">Bronquite?</string>
    <string name="Asma">Asma?</string>

    <!-- -->

    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>

    <string name="formulario2_banner1">É tudo pergunta objetiva</string>
    <string name="formulario2_banner2">Vai ser bem rapidinho</string>
    <string name="formulario2_pergunta1">Caso de Diabétes na Família</string>
    <string name="formulario2_pergunta2">Caso de Hipertenção Arterial na Família</string>
    <string name="formulario2_pergunta3">Caso de Doenças Cardíacas na Família</string>
    <string name="formulario2_pergunta4">Caso de Doença Neuro-Degenerativas na Fanília(Parkison/Alzheimer/epilepsia)?</string>
    <string name="formulario2_pergunta5">Caso de Insuficiencia Renal na Família</string>
    <string name="formulario2_pergunta6">Caso de DST na Família(Doença Seualmente Trasnmissível)?</string>
    <string name="formulario2_pergunta7">Caso de Obesiedade na Família</string>

    <!-- Login-->
    <string name="esqueceu_senha">Esqueceu a senha?</string>
    <string name="login">Login</string>
    <string name="cadastro">CADASTRE-SE</string>
    <string name="email">E-mail</string>
    <string name="senha">Senha</string>

    <!-- Cadastro -->
    <string name="cadastro_nome">Nome</string>
    <string name="cadastro_email">E-mail</string>
    <string name="cadastro_cpf">CPF</string>
    <string name="cadastro_nasc">Data de nascimento</string>
    <string name="cadastro_senha">Senha</string>
    <string name="cadastro_telefone">Telefone</string>
    <string name="cadastro_sexo">Sexo</string>
    <string name="cadastro_estado_civil">Estado civil</string>
    <string name="cadastro_masculino">Masculino</string>
    <string name="cadastro_feminino">Feminino</string>
    <string name="cadastro_solteiro">Solteiro(a)</string>
    <string name="cadastro_casado">Casado(a)</string>
    <string name="cadastro_divorciado">Divorciado(a)</string>
    <string name="cadastro_viuvo">Viúvo(a)</string>
    <string name="cadastro_separado">Separado(a)</string>
    <string name="cadastro_finalizar">Cadastrar</string>
    <string name="confirmar">CONFIRMAR</string>
    <string name="Idade">Idade</string>
    <string name="campo_obrigatorio">Campo obrigatório</string>
    <string name="cidade">Cidade</string>
    <string name="Estado">Estado</string>
    <string name="Infarto">Infarto</string>
    <string name="Outrasdoencas">Outras doenças crônicas</string>


    <string name="title_activity_lista_basica">listaBasica</string>


    <string name="cadMedStringInsiraPeriodo">Insira o periodo do Uso do medicamento</string>
    <string name="numero_de_dias">Numero de dias</string>
    <string name="intervalo_em_horas">Intervalo de uso em horas</string>
    <string name="cadMedStringIntervaloUso">Insira o intervalo do Uso do medicamento</string>
    <string name="cadMedStringDataInicial">Data Inicial do Tratamento</string>
    <string name="cadMedStringTitulo">Controle de medicação</string>

    <string name="teste_notificacao_notification_title_template">Teste notificacao: %1$s</string>

    <!-- TODO: remove this placeholder text -->
    <string name="teste_notificacao_notification_placeholder_text_template">You said %1$s and lorem
        ipsum dolor sit amet, consectetur adipiscing elit. Etiam non enim magna. Morbi dictum, velit
        vel semper venenatis, magna odio volutpat velit, at ullamcorper nulla lacus sed turpis.
        Pellentesque vitae metus elit, nec tincidunt tellus. Integer sed nisl sem, ullamcorper
        ornare lacus. Duis ac mauris sed massa congue volutpat. Donec sed erat sit amet turpis
        viverra rhoncus sit amet nec magna. Donec lacinia ligula at libero volutpat volutpat nec nec
        tortor.
    </string>

    <string name="action_share">Share</string>
    <string name="action_reply">Reply</string>

    <string name="teste_nofiticacao_notification_title_template">Teste nofiticacao: %1$s</string>

    <!-- TODO: remove this placeholder text -->
    <string name="teste_nofiticacao_notification_placeholder_text_template">You said %1$s and lorem
        ipsum dolor sit amet, consectetur adipiscing elit. Etiam non enim magna. Morbi dictum, velit
        vel semper venenatis, magna odio volutpat velit, at ullamcorper nulla lacus sed turpis.
        Pellentesque vitae metus elit, nec tincidunt tellus. Integer sed nisl sem, ullamcorper
        ornare lacus. Duis ac mauris sed massa congue volutpat. Donec sed erat sit amet turpis
        viverra rhoncus sit amet nec magna. Donec lacinia ligula at libero volutpat volutpat nec nec
        tortor.
    </string>
    <string name="title_activity_item_remedio">ItemRemedio</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_teste_interfae">TesteInterfae</string>
</resources>
