<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CadastroUsuario">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/fundo"
        >
        <EditText
            android:id="@+id/txtCadNome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/inicio_margem_centralizados"
            android:layout_marginStart="@dimen/inicio_margem_centralizados"
            android:ems="10"
            android:hint="@string/cadastro_nome"
            android:inputType="textPersonName"
            android:textAppearance="@style/TextAppearance.AppCompat" />


        <EditText
            android:id="@+id/txtCadEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/inicio_margem_centralizados"
            android:layout_marginStart="@dimen/inicio_margem_centralizados"
            android:ems="10"
            android:hint="@string/cadastro_email"
            android:inputType="textEmailAddress"
            android:textAppearance="@style/TextAppearance.AppCompat" />

        <EditText
            android:id="@+id/txtCadCPF"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/inicio_margem_centralizados"
            android:layout_marginStart="@dimen/inicio_margem_centralizados"
            android:ems="10"
            android:hint="@string/cadastro_cpf"
            android:inputType="textPersonName"
            android:textAppearance="@style/TextAppearance.AppCompat" />

        <EditText
            android:id="@+id/txtCadNasc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/inicio_margem_centralizados"
            android:layout_marginStart="@dimen/inicio_margem_centralizados"
            android:ems="10"
            android:hint="@string/cadastro_nasc"
            android:inputType="text|date"
            android:textAppearance="@style/TextAppearance.AppCompat" />

        <EditText
            android:id="@+id/txtCadSenha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/inicio_margem_centralizados"
            android:layout_marginStart="@dimen/inicio_margem_centralizados"
            android:ems="10"
            android:hint="@string/cadastro_senha"
            android:inputType="textPassword"
            android:textAppearance="@style/TextAppearance.AppCompat" />

        <EditText
            android:id="@+id/txtCadTelefone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/inicio_margem_centralizados"
            android:layout_marginStart="@dimen/inicio_margem_centralizados"
            android:ems="10"
            android:hint="@string/cadastro_telefone"
            android:inputType="textPersonName"
            android:textAppearance="@style/TextAppearance.AppCompat" />

        <TextView
            android:id="@+id/txtCadSexo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/inicio_margem_centralizados"
            android:layout_marginStart="@dimen/inicio_margem_centralizados"
            android:text="@string/cadastro_sexo"
            android:textAppearance="@style/TextAppearance.AppCompat" />
        <RadioGroup
            android:id="@+id/radioGroupCadUsuario"
            android:layout_width="match_parent"
            android:layout_height="53dp"
            android:layout_marginEnd="@dimen/inicio_margem_centralizados"
            android:layout_marginStart="@dimen/inicio_margem_centralizados"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rdMasc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/cadastro_masculino" />

            <RadioButton
                android:id="@+id/rdFem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/cadastro_feminino" />
        </RadioGroup>
        <TextView
            android:id="@+id/txtCadEstCivil"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/inicio_margem_centralizados"
            android:layout_marginStart="@dimen/inicio_margem_centralizados"
            android:text="@string/cadastro_estado_civil"
            android:textAppearance="@style/TextAppearance.AppCompat" />

        <RadioGroup
            android:id="@+id/radioGroupEstadoCivil"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/inicio_margem_centralizados"
            android:layout_marginStart="@dimen/inicio_margem_centralizados"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/rdSolteiro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/cadastro_solteiro" />

            <RadioButton
                android:id="@+id/rdCasado"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/cadastro_casado" />

            <RadioButton
                android:id="@+id/rdDivorciado"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/cadastro_divorciado" />

            <RadioButton
                android:id="@+id/rdViuvo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/cadastro_viuvo" />

            <RadioButton
                android:id="@+id/rdSeparado"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/cadastro_separado" />


        </RadioGroup>

    </LinearLayout>
</android.support.constraint.ConstraintLayout>