<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".CadastroRemedio">

    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"

        android:visibility="visible"

        app:logo="@drawable/lifecare"

        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:title="">

    </android.support.v7.widget.Toolbar>

    <ScrollView
        android:id="@+id/scroll3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"


        >

        <LinearLayout
            android:id="@+id/layoutprincipal3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/inicio_margem_centralizados"
            android:layout_marginStart="@dimen/inicio_margem_centralizados"
            android:layout_marginTop="@dimen/espaco_entre_componentes_primarios"
            android:orientation="vertical"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintTop_toBottomOf="@+id/my_toolbar3">

            <TextView
                android:id="@+id/boasVindasRemedio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cadMedStringTitulo"
                android:textColor="@color/corTitulo2"
                android:textSize="@dimen/titulo1_size"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/medicamento1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/espaco_entre_componentes_primarios"
                android:text="@string/cadMedStringInsiraPeriodo"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@+id/boasVindasRemedio" />

            <EditText
                android:id="@+id/cadMedicamentoPeriodo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/numero_de_dias"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/medicamento2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/espaco_entre_componentes_primarios"
                android:text="@string/cadMedStringIntervaloUso"
                android:textColor="@android:color/black"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/cadMedicamentoIntervalo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/intervalo_em_horas"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cadMedStringDataInicial"
                android:textColor="@android:color/black"
                android:textStyle="bold" />

            <CalendarView
                android:id="@+id/calendarView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:layout_editor_absoluteX="17dp" />

            <Button
                android:id="@+id/button4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="50dp"
                android:text="@string/confirmar" />

        </LinearLayout>


    </ScrollView>

</LinearLayout>