<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Formulario_segundo">

    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"

        android:visibility="visible"

        app:layout_constraintBottom_toTopOf="@+id/scroll"
        app:logo="@drawable/lifecare"

        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:title="">

    </android.support.v7.widget.Toolbar>
    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"


        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/my_toolbar"
        app:layout_constraintTop_toBottomOf="@+id/my_toolbar">

    <LinearLayout
        android:id="@+id/layoutprincipal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"

        android:orientation="vertical"

        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/my_toolbar">

        <LinearLayout
            android:id="@+id/boasVindasForm"
            android:layout_width="match_parent"
            android:layout_height="68dp"
            android:layout_marginEnd="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layoutprincipal">

            <TextView
                android:id="@+id/boasVindasText1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/formulario1_banner1"
                android:textColor="@color/corTitulo1"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/boasVindasText2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/formulario1_banner2"
                android:textColor="@color/corTitulo2"
                android:textStyle="bold" />
        </LinearLayout>
        <TextView
            android:id="@+id/textoPergunta1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/formulario1_pergunta1"
            android:textColor="@android:color/black"
            android:textStyle="bold"
             android:layout_marginEnd="16dp"
                android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            app:layout_constraintTop_toBottomOf="@id/boasVindasForm"/>
    </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>